--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- FONT PLUS -->
     <script type="text/javascript" src="//webfont.fontplus.jp/accessor/script/fontplus.js?NjUkFp4pxAM%3D&box=K6QNpXgrxEo%3D&aa=1&ab=2" charset="utf-8"></script>
+    <!-- 電話番号自動リンク対策 -->
+    <meta name="format-detection" content="telephone=no">
   </head>
   <body>
     <div class="top">
@@ -18,14 +20,12 @@
         <source media="(max-width: 2000px)" srcset="images/max-width-599px/tooth.png">
         <img class="img-tooth" src="images/max-width-599px/tooth.png" alt="歯のイラスト">
       </picture>
-      <!-- <img class="img-tooth" src="images/tooth.png" alt="歯のイラスト" title="歯のイラスト"> -->
       <picture>
         <source media="(max-width: 599px)" srcset="images/max-width-599px/logo.png">
         <source media="(max-width: 1024px)" srcset="images/max-width-599px/logo.png">
         <source media="(max-width: 2000px)" srcset="images/max-width-599px/logo.png">
         <img class="img-logo" src="images/max-width-599px/logo.png" alt="株式会社入曽デザインのロゴマーク">
       </picture>
-      <!-- <img class="img-logo" src="images/logo.png" alt="ロゴマーク" title="ロゴマーク"> -->
       <p class="company-name">株式会社入曽デザイン</p>
       <div class="top-text">
         <h1 class="yellow">所沢・狭山・入間</h1>
@@ -34,99 +34,89 @@
       </div>
     </div>
     <div class="example">
-      <!-- <div class="example-mask"> -->
-        <div class="example-qr">
-          <div class="example-qr-text">
-            <p><span class="ito-ortho">いとう矯正歯科</span><span class="mr">様</span><span class="sayama-city">（狭山市）</span></p>
-            <a class="ito-ortho-url" href="https://www.ito-ortho.com/">https://www.ito-ortho.com/</a>
-          </div>
-          <picture>
-            <source media="(max-width: 599px)" srcset="images/max-width-599px/ito-ortho-qr-cord.png">
-            <source media="(max-width: 1024px)" srcset="images/max-width-599px/ito-ortho-qr-cord.png">
-            <source media="(max-width: 2000px)" srcset="images/max-width-599px/ito-ortho-qr-cord.png">
-            <img class="ito-ortho-qr" src="images/max-width-599px/ito-ortho-qr-cord.png" alt="いとう矯正歯科のQRコード">
-          </picture>
-          <!-- <img class="ito-ortho-qr" src="images/ito-ortho-qr-cord.png" alt="いとう矯正歯科のQRコード" title="いとう矯正歯科のQRコード"> -->
+      <div class="example-qr">
+        <div class="example-qr-text">
+          <p><span class="ito-ortho">いとう矯正歯科</span><span class="mr">様</span><span class="sayama-city">（狭山市）</span></p>
+          <a class="ito-ortho-url" href="https://www.ito-ortho.com/">https://www.ito-ortho.com/</a>
         </div>
-        <div id="example-pc">
-          <div class="example-introduction-pc">
-            <div class="example-left">
-              <picture>
-                <!-- <source media="(max-width: 600px)" srcset="images/max-width-599px/ito-ortho.png"> -->
-                <source media="(max-width: 1024px)" srcset="images/max-width-599px/ito-ortho.png">
-                <source media="(max-width: 2000px)" srcset="images/max-width-599px/ito-ortho.png">
-                <img class="ito-ortho-hp" src="images/max-width-599px/ito-ortho.png" alt="いとう矯正歯科のHP">
-              </picture>
-              <!-- <img class="ito-ortho-hp" src="images/ito-ortho.png" alt="いとう矯正歯科のHP" title="いとう矯正歯科のHP"> -->
-            </div>
-            <div class="example-right">
-              <div class="example-contents">
-                <div class="line-1"></div>
-                <h2 class="title"><span class="circle"></span>写真</h2>
-                <p class="description">専属のプロカメラマンが、鮮明かつ繊細で、瞬間を切り取ったような活き活きとした写真を撮影します。</p>
-              </div>
-              <div class="example-contents">
-                <div class="line-2"></div>
-                <h2 class="title"><span class="circle"></span>キャッチコピー</h2>
-                <p class="description">先生の強い想いを代弁しつつ、ありふれた表現で埋もれてしまわないような、フックのある言葉を選びます。</p>
-              </div>
-              <div class="example-contents">
-                <div class="line-3"></div>
-                <h2 class="title"><span class="circle"></span>ライティング</h2>
-                <p class="description">歯科業界に精通したライターが、読みやすく分かりやすく、正しい文章を用意します。</p>
-              </div>
-              <div>
-                <h2 class="title"><span class="circle"></span>フル・レスポンシブ</h2>
-                <p class="description">新旧スマートフォン、タブレット、PCモニター、どのようなデバイスで閲覧しても最適なレイアウトを実現します。</p>
-              </div>
-              <div class="responsive">
-                <picture>
-                  <!-- <source media="(max-width: 600px)" srcset="images/max-width-599px/pc.png"> -->
-                  <source media="(max-width: 1024px)" srcset="images/max-width-599px/pc.png">
-                  <source media="(max-width: 2000px)" srcset="images/max-width-599px/pc.png">
-                  <img class="img-pc" src="images/max-width-599px/pc.png" alt="PCの画像">
-                </picture>
-                <!-- <img class="img-pc" src="images/pc.png" alt="PCの画像" title="PCの画像"> -->
-                <picture>
-                  <!-- <source media="(max-width: 600px)" srcset="images/max-width-599px/ito-ortho-qr-cord.png"> -->
-                  <source media="(max-width: 1024px)" srcset="images/max-width-599px/sp.png">
-                  <source media="(max-width: 2000px)" srcset="images/max-width-599px/sp.png">
-                  <img class="img-sp" src="images/max-width-599px/sp.png" alt="スマホの画像">
-                </picture>
-                <!-- <img class="img-sp" src="images/sp.png" alt="スマホの画像" title="スマホの画像"> -->
-              </div>
-            </div>
+        <picture>
+          <source media="(max-width: 599px)" srcset="images/max-width-599px/ito-ortho-qr-cord.png">
+          <source media="(max-width: 1024px)" srcset="images/max-width-599px/ito-ortho-qr-cord.png">
+          <source media="(max-width: 2000px)" srcset="images/max-width-599px/ito-ortho-qr-cord.png">
+          <img class="ito-ortho-qr" src="images/max-width-599px/ito-ortho-qr-cord.png" alt="いとう矯正歯科のQRコード">
+        </picture>
+      </div>
+      <div id="example-pc">
+        <div class="example-introduction-pc">
+          <div class="example-left">
+            <picture>
+              <source media="(max-width: 1024px)" srcset="images/max-width-599px/ito-ortho.png">
+              <source media="(max-width: 2000px)" srcset="images/max-width-599px/ito-ortho.png">
+              <img class="ito-ortho-hp" src="images/max-width-599px/ito-ortho.png" alt="いとう矯正歯科のHP">
+            </picture>
           </div>
-        </div>
-
-        <div id="example-sp">
-          <div class="example-introduction-sp">
-            <div>
+          <div class="example-right">
+            <div class="example-contents">
+              <div class="line-1"></div>
               <h2 class="title"><span class="circle"></span>写真</h2>
               <p class="description">専属のプロカメラマンが、鮮明かつ繊細で、瞬間を切り取ったような活き活きとした写真を撮影します。</p>
             </div>
-            <img class="img-photo image-sp" src="images/max-width-599px/photo.png" alt="いとう矯正歯科のHPのTOP画像" title="いとう矯正歯科のHPのTOP画像">
-            <div>
+            <div class="example-contents">
+              <div class="line-2"></div>
               <h2 class="title"><span class="circle"></span>キャッチコピー</h2>
               <p class="description">先生の強い想いを代弁しつつ、ありふれた表現で埋もれてしまわないような、フックのある言葉を選びます。</p>
             </div>
-            <img class="img-catch-copy image-sp" src="images/max-width-599px/catch-copy.png" alt="いとう矯正歯科のHPのキャッチコピー" title="いとう矯正歯科のHPのキャッチコピー">
-            <div>
+            <div class="example-contents">
+              <div class="line-3"></div>
               <h2 class="title"><span class="circle"></span>ライティング</h2>
               <p class="description">歯科業界に精通したライターが、読みやすく分かりやすく、正しい文章を用意します。</p>
             </div>
-            <img class="img-lighting image-sp" src="images/max-width-599px/lighting.png" alt="いとう矯正歯科のHPのライティング" title="いとう矯正歯科のHPのライティング">
             <div>
               <h2 class="title"><span class="circle"></span>フル・レスポンシブ</h2>
               <p class="description">新旧スマートフォン、タブレット、PCモニター、どのようなデバイスで閲覧しても最適なレイアウトを実現します。</p>
             </div>
             <div class="responsive">
-              <img class="img-pc" src="images/max-width-599px/pc.png" alt="PCの画像" title="PCの画像">
-              <img class="img-sp" src="images/max-width-599px/sp.png" alt="スマホの画像" title="スマホの画像">
+              <picture>
+                <source media="(max-width: 1024px)" srcset="images/max-width-599px/pc.png">
+                <source media="(max-width: 2000px)" srcset="images/max-width-599px/pc.png">
+                <img class="img-pc" src="images/max-width-599px/pc.png" alt="PCの画像">
+              </picture>
+              <picture>
+                <source media="(max-width: 1024px)" srcset="images/max-width-599px/sp.png">
+                <source media="(max-width: 2000px)" srcset="images/max-width-599px/sp.png">
+                <img class="img-sp" src="images/max-width-599px/sp.png" alt="スマホの画像">
+              </picture>
             </div>
           </div>
         </div>
-      <!-- </div> -->
+      </div>
+      <div id="example-sp">
+        <div class="example-introduction-sp">
+          <div>
+            <h2 class="title"><span class="circle"></span>写真</h2>
+            <p class="description">専属のプロカメラマンが、鮮明かつ繊細で、瞬間を切り取ったような活き活きとした写真を撮影します。</p>
+          </div>
+          <img class="img-photo image-sp" src="images/max-width-599px/photo.png" alt="いとう矯正歯科のHPのTOP画像" title="いとう矯正歯科のHPのTOP画像">
+          <div>
+            <h2 class="title"><span class="circle"></span>キャッチコピー</h2>
+            <p class="description">先生の強い想いを代弁しつつ、ありふれた表現で埋もれてしまわないような、フックのある言葉を選びます。</p>
+          </div>
+          <img class="img-catch-copy image-sp" src="images/max-width-599px/catch-copy.png" alt="いとう矯正歯科のHPのキャッチコピー" title="いとう矯正歯科のHPのキャッチコピー">
+          <div>
+            <h2 class="title"><span class="circle"></span>ライティング</h2>
+            <p class="description">歯科業界に精通したライターが、読みやすく分かりやすく、正しい文章を用意します。</p>
+          </div>
+          <img class="img-lighting image-sp" src="images/max-width-599px/lighting.png" alt="いとう矯正歯科のHPのライティング" title="いとう矯正歯科のHPのライティング">
+          <div>
+            <h2 class="title"><span class="circle"></span>フル・レスポンシブ</h2>
+            <p class="description">新旧スマートフォン、タブレット、PCモニター、どのようなデバイスで閲覧しても最適なレイアウトを実現します。</p>
+          </div>
+          <div class="responsive">
+            <img class="img-pc" src="images/max-width-599px/pc.png" alt="PCの画像" title="PCの画像">
+            <img class="img-sp" src="images/max-width-599px/sp.png" alt="スマホの画像" title="スマホの画像">
+          </div>
+        </div>
+      </div>
     </div>
     <div class="customer-voice">
       <div class="customer-voice-text">
@@ -418,7 +408,6 @@
         <p>https://iriso.work/</p>
       </div>
     </div>
-
     <script src="test.js"></script>
   </body>
 </html>
